--- a/anydoor/package.json
+++ b/anydoor/package.json
@@ -4,8 +4,12 @@
   "description": "静态资源服务器项目",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --init"
   },
   "author": "YJ",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^7.15.0"
+  }
 }
